--- a/templates/index.html
+++ b/templates/index.html
@@ -13,6 +13,7 @@
         {{ nav_form.prod_nav(class_="main_view") }}
         {{ nav_form.loc_nav(class_="main_view") }}
         {{ nav_form.mov_nav(class_="main_view") }}
+        {{ nav_form.over_nav(class="main_view") }}
     </form>
     {% block body %}
     <div class="welcome">
